@@ -1,5 +1,11 @@
 2004-10-16  Damien Sandras  <dsandras@gnome.org>
 
+	* src/common.h, src/gdkvideoio.cpp, src/main_window.cpp: Added
+	"Side-By-Side" view to display remote and local video side-by-side.
+	Fixes suggestion #131123.
+
+2004-10-16  Damien Sandras  <dsandras@gnome.org>
+
 	* src/urlhandler.cpp: Fixed locking issue thanks to Kilian and Daniel!
 
 2004-10-16  Damien Sandras  <dsandras@gnome.org>
